<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/information_text"
        android:textAppearance="?android:attr/textAppearanceMedium" >
    </TextView>

    <EditText
        android:id="@+id/session_name_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_views"
        android:ems="@integer/ems_for_edit_text"
        android:gravity="center"
        android:hint="@string/session_name_text_hint" >

        <requestFocus>
        </requestFocus>
    </EditText>

    <EditText
        android:id="@+id/students_test_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_views"
        android:ems="@integer/ems_for_edit_text"
        android:gravity="center"
        android:hint="@string/students_tests_text_hint"
        android:inputType="number" >
    </EditText>

</LinearLayout>