<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.session.GradeSessionActivity" >

    <Button
        android:id="@+id/take_picture_reference_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_reference_picture_button_text" >
    </Button>

    <Button
        android:id="@+id/start_taking_students_pictures_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/start_taking_students_pictures_button_text" >
    </Button>

    <Button
        android:id="@+id/compute_students_score_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:onClick="onProcessStudentsTests"
        android:text="@string/compute_students_score_button_text" >
    </Button>

</LinearLayout>